# dcwaterdesign

./: README.md
CVSROOT/: ciabot_cvs.pl  loginfo
calibration/: allele.cpp  allele.h  calibrate.sh  gene.cpp  gene.h  genetic.cpp  genetic.h  random.sh
dccadcleaner/: .project  AUTHORS  ChangeLog  NEWS  README  build.xml
dcgridcreation/: AUTHORS  ChangeLog  dcgridcreation.apr
dcprocess/: AUTHORS  ChangeLog  build.xml  dcprocess.assignpointattributesfromgrid.ave  dcprocess.batchconvertcoveragestoshapefiles.ave  dcprocess.convertlinestoarrows.ave  dcprocess.createcrosspolylinesfrompoints.ave  dcprocess.createplgnthemefromplltheme.ave  dcprocess.createplgnthemefromtintheme.ave  dcprocess.createpllthemefromplgntheme.ave  dcprocess.createpllthemefrompllztheme.ave  dcprocess.createpllthemefrompntthemeanddbf.ave  dcprocess.createpntthemefromgrid.ave  dcprocess.createpntthemefrommultipointtheme.ave  dcprocess.createpntthemefromplgntheme.ave  dcprocess.createpntthemefromplltheme.ave  dcprocess.createsquarepolygonsfrompoints.ave  dcprocess.createtinplgnthemefrompnttheme.ave  dcprocess.createuniqueid.ave  dcprocess.extendpolylines.ave  dcprocess.extendpolylines.update.ave  dcprocess.fields.returnnumberfields.ave  dcprocess.fields.returnstringfields.ave  dcprocess.ftab.copyfields.ave  dcprocess.ftab.copyrecordvalues.ave  dcprocess.help.openchm.ave  dcprocess.interpolatepntvaluesfrompnttheme.ave  dcprocess.interpolatepntvaluesfrompntthemeandtin.ave  dcprocess.line.findnodes.ave  (+46 more)
gdbfdiff/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c
(+390 files in other folders)
